--- a/.github/workflows/build_addin.yml
+++ b/.github/workflows/build_addin.yml
@@ -14,7 +14,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [10.x, 12.x]
+        node-version: [12.x]
 
     steps:
     - uses: actions/checkout@v2
@@ -24,5 +24,10 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm ci
     - run: npm run build --if-present
+    - name: Upload math result for job 1
+      uses: actions/upload-artifact@v1
+      with:
+        name: drop
+        path: /dist
       env:
         CI: true
